# Sine-Saloum-Map

./: KmlCSV.py  PlotDATA.py  README.md  SentinelHubDownload.py  main.py  pyproject.toml  requirements.txt
satellite_map/: __init__.py  config.py  downloader.py  pipeline.py  plotter.py  utils.py
scripts/: download_data.py  full_pipeline.py  plot_data.py
